--- a/styles/style2.css
+++ b/styles/style2.css
@@ -7,25 +7,32 @@ body {
     margin: auto;
 }
 
-
 h1 {
-    color:white;
-    margin-left:.5em;
-    margin-top:.2em;
+    color: white;
+    margin-left: .5em;
+    margin-top: .2em;
     max-width: 60%;
 }
 
 h2 {
-    background-color:white;
-    color:grey;
-    margin:0;
-    padding:0.5em;
-    text-align:center;
+    background-color: white;
+    color: grey;
+    margin: 0.4em;
+    padding: 0.5em;
+    text-align: center;
+}
+
+h3 {
+    color: white;
+}
+
+p {
+    color: white;
 }
 
 /* header */
 header {
-    background-color: rgb(6, 24, 61);
+    background-color: rgba(6, 24, 61);
     margin: 0;
     width: 100%;
 }
@@ -39,17 +46,25 @@ header nav ul {
 }
 
 /* eurostar logo */
-header ul li:first-of-type img  {
+header ul li:first-of-type img {
     margin-top: 0.4em;
     padding: .7em;
     width: 80%;
 }
 
-/* profiel logo */
+/* profiel icoon */
 header ul li:nth-of-type(2) img {
     margin-right: 1.3em;
     margin-top: 1.2em;
     width: 1.7em;
+    transition: all .5s ease-in-out;
+}
+
+/* hover op het profiel icoon  */
+header ul li:nth-of-type(2) img:hover {
+    /* bron voor transition en transform:https://css-tricks.com/snippets/css/scale-on-hover-with-webkit-transition/*/
+    transform: scale(1.2);
+    /* einde bron*/
 }
 
 /* begin article */
@@ -61,33 +76,62 @@ header > article {
     box-shadow: inset 100px 100px 100px rgba(0, 0, 0, 0.9);
     height: 15em;
     max-width: 100%;
-    padding:2%;
+    padding: 2%;
 }
 
+/* a in article */
 header article > a {
-    background-color: yellow;
+    background-color: rgb(255, 236, 0);
     border: 0;
-    border-radius: .5em;
-    box-shadow: rgb(222, 194, 4) 0px 2px 0px 0px, rgba(0, 0, 0, 0.2) 0px 3px 2px 0px; /*bron:Eurostar.nl*/
+    /*bron: van Eurostar.nl (update: 15 jan 2020 */
+    border-radius: 0.25em;
+    box-shadow: rgb(210, 184, 43) 0px -2px 0px 0px inset, rgba(0, 0, 0, 0.2) 0px 1px 2px 0px;
+    /* einde bron */
     color: rgb(85, 86, 90);
-    margin-left:.5em;
+    margin-left: .5em;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
+    transition:color 0.2s ease-out;
 }
-/*einde header*/
-/*begin main*/
 
+/* hover in article in de header */
+header article > a:hover {
+    /opacity: 0.8;
+    color: darkblue;
+    /background-color:rgb(255, 234, 106);
+    /background-color:black;
+}
+
+/* div laadbalk default state*/
+div.loader {
+    width: 110vw;
+    height: 1.5em;
+    background-color: white;
+    opacity: 0.5;
+    transform: translateX(-110vw);
+    transition: all .5s cubic-bezier(.17, .67, .83, .67);
+}
+
+/* div laadbalk loaded state*/
+div.loaded {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+/*einde header*/
+
+/*begin main*/
 main {
-    background-color: rgb(33,181,201);
+    background-color: rgb(33, 181, 201);
     display: flex;
     flex-direction: column;
-    padding:2em;
-    margin:0;
+    padding: 2em;
+    margin: 0;
 }
 
-/* 3 ul waar 3 tabjes/buttons inzitten*/
+/* 3 uls waar 3 tabjes/buttons inzitten*/
 main ul {
     display: flex;
     flex-direction: row;
@@ -96,115 +140,142 @@ main ul {
     padding: 0;
 }
 
-/* eerste tab */
+/* eerste tab/button */
 main > ul:first-of-type li button {
-    background-color:darkblue;
     background-color: rgba(6, 24, 61, .8);
     border: none;
-    border-radius: .5em .5em 0em 0em;
+    border-radius: .25em .25em 0em 0em;
     color: white;
     margin-right: 0.3rem;
     padding: 1.1rem;
     text-transform: uppercase;
+    transition:background-color 1s ease-in-out;
 }
 
-/* tweede tab */
+/* tweede tab/button */
 main > ul:first-of-type li:nth-of-type(2) button {
     background-color: white;
-    color:grey;
+    color: grey;
 }
 
-/* derde tab */
+/* derde tab/button */
 main > ul:first-of-type li:nth-of-type(3) button {
     background-color: white;
-    color:grey;
+    color: grey;
 }
 
-/* formulier */
-main form {
-    /*border:0;*/
-    background-color:darkblue;
-    background-color: rgba(6, 24, 61, 0.8);
-    border-radius: 0 .5em .5em 0;
-    padding: 1rem;
-}
-
-/* p in het formulier */
-main form p{
+/* hover 3 tabjes/buttons */
+main > ul:first-of-type li:nth-of-type(2) button:hover{
+    background-color: rgba(6, 24, 61, .8);
     color:white;
 }
 
-/*2 fieldsets in het formulier, want er zijn 2 onderdelen: lengte en vormgeving. Er zitten dus ook 2 legends in */
-
-main form fieldset {
-    border:none;}
-
-
-main form fieldset legend {
-    font-size:1.2em;
-    font-weight:bold;
-    padding-top:.5rem;
+main > ul:first-of-type li:nth-of-type(3) button:hover {
+    background-color: rgba(6, 24, 61, .8);
+    color:white;
 }
-/* dit divje heb ik gebruikt om de achtergrond van  de twee fieldsets wit te krijgen */
+
+/* begin formulier */
+main form {
+    /*border:0;*/
+    background-color: darkblue;
+    background-color: rgba(6, 24, 61, 0.8);
+    border-radius: 0 .25em .25em 0;
+    padding: 1rem;
+}
+
+/*2 fieldsets in het formulier, want er zijn 2 onderdelen: lengte en vormgeving. Er zitten dus ook 2 legends in */
+main form fieldset {
+    border: none;
+}
+
+/* Legends in het formulier */
+main form fieldset legend {
+    font-size: 1.2em;
+    font-weight: bold;
+    padding-top: .5rem;
+}
+
+/* dit divje heb ik gebruikt om de achtergrond van de twee fieldsets wit te krijgen */
 main form div {
-    background-color:white;
-    border-radius: .2em;
+    background-color: white;
+    border-radius: .25em;
 }
 
 /* dit is de stijl van de submitknop*/
 main form input[type=submit] {
-    background-color: yellow;
+    background-color: rgb(255, 236, 0);
     border: 0;
-    border-radius: .2em;
+    border-radius: 0.25em;;
     color: rgb(85, 86, 90);
-    font-size:1em;
-    margin-bottom:.4em;
-    margin-top:.7em;
+    font-size: 1em;
+    margin-bottom: .4em;
+    margin-top: .7em;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
     width: 100%;
+    /transition: opacity .5s ease-out;
+    transition:color 0.5s ease-in-out;
+    /*bron:https://stackoverflow.com/questions/12992183/css-transition-fade-on-hover/16345962 */
 }
-/* dit is de 'doe een gok link, onder de submit */
-main a {
+
+/* hover van de submit knop */
+main form .search:hover {
+    /opacity: 0.8;
+    color: rgba(6, 24, 61);
+    /background-color:rgb(255, 234, 106);
+}
+
+/* dit is de 'doe een gok' link, onder de submit knop */
+main form a {
     background-color: rgb(33, 181, 201);
     border: 0;
-    border-radius: .2em;
-    color: white;
-    display:block;
-    font-size:1em;
+    border-radius: 0.25em;;
+    color: rgb(85, 86, 90);
+    display: block;
+    font-size: 1em;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
+    transition:color 0.5s ease-in-out;
+}
+
+/* hover 'doe een gok' link onder de submit knop*/
+main form a:hover {
+    color: rgba(6, 24, 61);
 }
 
 /* einde formulier */
-/* class overzicht (grid) verdeeld in 3 classes */
+
+/* begin class overzicht (grid) verdeeld in 3 classes */
 .overzicht {
     display: grid;
     max-width: 100%;
-    /*height: 100px;*/
 }
 
-
 /* de article zit in een link zodat je op het vlak van de article kunt klikken en niet allen op de tekts*/
-
-
 .overzicht div a {
     align-items: center;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: 10em;
     justify-content: center;
     text-decoration: none;
-    width: 100%;
+    position: relative;
+    overflow: hidden;
     grid-gap:2em;
+    transition: all 0.6s ease-in-out;
 }
 
+/* hover van deze link */
+.overzicht div a:hover {
+    opacity: 0.6;
+}
 
-/* bron van tom william -streepje onder h2*/
+/* streepje onder h2 (bron van tom william, student CMD) */
 .overzicht h2:after {
     border-bottom: 3px solid #7DD3DF;
     content: "";
@@ -220,67 +291,147 @@ main a {
     align-items: center;
     display: flex;
     flex-direction: column;
-    height: 100%;
     justify-content: center;
-    margin: 0.6em 0;
-    margin-top:0;
-    max-width: 100%;
-    min-height:10em;
-    width: 100%;
 }
 
+/* h3 in class overzicht */
 .overzicht a article h3 {
     border-bottom: 3px solid;
     border-top: 3px solid;
-    /*margin-bottom:.8em;*/
     max-width: 18em;
     padding: 0 1.25em;
     text-align: center;
-
+    position: relative;
+    z-index: 15;
+    margin-bottom: 0;
 }
 
+/* eerste img  in het article in class overzicht */
+.overzicht article img:nth-of-type(1) {
+    position: absolute;
+    z-index: 5;
+    width: 100%;
+    top: 0;
+}
+
+/* tweede img  in het article in class overzicht */
+.overzicht article img:nth-of-type(2) {
+    position: relative;
+    z-index: 15;
+    margin-bottom: 1em;
+    transition: all 0.9s;
+}
+
+/* hover op de tweede img in het article in class overzicht */
+.overzicht article img:nth-of-type(2):hover {
+    transform: scale(1.1);
+}
+
+.overzicht article img:nth-of-type(3) {
+    position: absolute;
+    z-index: 15;
+    left: 1.2em;
+    top: 1.2em;
+}
+
+/* home id - dit geldt alleen voor de tweede img in het article in class overzicht op de homepage-verhalenpag.*/
+#home .overzicht article img:nth-of-type(2) {
+    margin-top: 1em;
+}
+
+/* hiermee geef ik de articles in class overzicht een overlay */
+.overzicht article:before {
+    content: "";
+    background-color: rgba(0, 0, 0, .5);
+    position: absolute;
+    z-index: 6;
+    width: 100%;
+    height: 100%;
+}
+
+/* home id - dit geldt alleen voor de articles in class overzicht op de homepage-verhalenpag. - geen overlay op de articles zoals bij de overzichtspagina */
+#home .overzicht article:before {
+    display: none;
+}
+
+/* p in class overzicht */
 .overzicht a article p {
     text-align: center;
-    color:rgb(86,87,91);
+    position: relative;
+    z-index: 6;
+    margin-top: 0.6em;
+    margin-bottom: 1em;
 }
-/* einde algemene instellingen /*
 
+/* buttons in klas overzicht */
+.overzicht article button {
+    background-image: url("../images/add.svg");
+    background-repeat: no-repeat;
+    background-color: transparent;
+    height: 3em;
+    position: absolute;
+    right: 1.2em;
+    top: 1.2em;
+    width: 3em;
+    z-index: 10;
+    border:none;
+    /*bron: an introduction: https://thoughtbot.com/blog/transitions-and-transforms */
+    transition: all 0.7s;
+
+}
+
+/* hover buttons in klas overzicht */
+.overzicht article button:hover {
+    transform: scale(1.6);
+    /* einde bron */
+}
+
+/* einde algemene instellingen /*
 
 /*specifieke instellingen voor class:verder */
 .overzicht div:first-of-type a {
-    background-image:url(../images/mop.svg);
-    background-size:cover;
-    background-position:center;
-    background-repeat:no-repeat;
-    box-shadow: inset 0px 10px 200px rgba(244, 226, 64, 0.7);
-    background-color:rgb(36,168,190);
-    color:rgb(85,86,90);
-    border-color:rgb(85,86,90);
-    margin:0;
+    background-color: rgb(36, 168, 190);
+    color: white;
+    border-color: rgb(85, 86, 90);
 }
 
 /*</>*/
 
 /*specifieke instellingen voor class:aanbev */
+.overzicht div:nth-of-type(1) a {
+    margin-top:0.3em;
+}
 
 .overzicht div:nth-of-type(2) a {
-    background-color:rgb(36,168,190);
-    color:white;
-
+    background-color: rgb(36, 168, 190);
+    color: white;
+    margin-top: 0.3em;
 }
 
 /*</>*/
 
 /*specifieke instellingen voor class:vormg */
 .overzicht div:nth-of-type(3) a {
-    background-color:rgb(230,230,231);
+    background-color: rgb(230, 230, 231);
+    margin-top: 0.3em;
 }
 
-.overzicht div:nth-of-type(3) a h3 {
-    color:rgb(6,24,61);
+#home .overzicht div:nth-of-type(3) a h3 {
+    color: rgb(6, 24, 61);
+}
+
+#home .overzicht p {
+    color: rgb(86, 87, 91);
 }
 
 /*</>*/
+
+/* begin footer */
+footer p {
+    color: black;
+    margin-left: 1em;
+}
+/* einde footer */
 
 /* Media queries */
 /* Mobiel exclusief volgorde is anders */
@@ -296,52 +447,52 @@ main a {
 
 /* Tab/Medium */
 @media (min-width: 40em) {
+     main form {
+        margin: 0 auto;
+    }
+
+    main ul {
+        margin: 0 auto;
+    }
+
     .overzicht {
         grid-template-columns: 1fr 1fr;
     }
-    .overzicht h2, .overzicht .vormg {
+
+    .overzicht h2,
+    .overzicht .vormg {
         grid-column: span 2;
     }
 
     .overzicht .verder {
         display: grid;
         grid-row: span 2;
-
-
     }
 
     .overzicht .vormg {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        grid-gap:0.3em;
     }
 
-    .overzicht div:nth-of-type(2) a:first-child{
-        background-image:url(../images/decock.svg);
-        background-size:cover;
-        background-position:bottom;
-        background-repeat:no-repeat;
+    .overzicht div:nth-of-type(2) a:first-child {
+        background-image: url(../images/decock.svg);
+        background-size: cover;
+        background-position: bottom;
+        background-repeat: no-repeat;
         box-shadow: inset 0px 10px 200px rgba(244, 226, 64, 0.7);
-        color:white;
+        color: white;
+        margin-left: 0.3em;
     }
 
-    .overzicht div:nth-of-type(2) a:nth-of-type(2){
-        background-image:url(../images/lepra.svg);
-        background-size:cover;
-        background-position:center;
+    .overzicht div:nth-of-type(2) a:nth-of-type(2) {
+        background-image: url(../images/lepra.svg);
+        background-size: cover;
+        background-position: center;
         box-shadow: inset 0px 10px 200px rgba(24, 40, 64, 0.7);
+        margin-left: 0.3em;
     }
 
-    main {
-        width:100%;
-    }
-    main form {
-    /*border:0;*/
-    margin: 0 auto;
-    }
-
-    main ul {
-    margin:0 auto;
-    }
 }
 
 @media (min-width: 60em) {
@@ -355,35 +506,15 @@ main a {
 
     .overzicht .aanbev {
         display: grid;
+        margin-right:0.3em;
     }
+
     .overzicht .vormg {
         grid-column: span 1;
         display: block;
         grid-template-rows: 1fr 1fr 1fr;
     }
 }
-
-
-/*.zoekresultaat[type="checkbox"] {
-    position: absolute !important;
-    clip: rect(1px 1px 1px 1px); /* IE6, IE7
-    clip: rect(1px, 1px, 1px, 1px);
-    padding:0 !important;
-    border:0 !important;
-    height: 1px !important;
-    width: 1px !important;
-    overflow: hidden;
-}*/
-
-body #zoekresultaat {
-    background-color:red;
-}
-
-
-
-
-
-
 
 
 
@@ -394,7 +525,6 @@ https://css-tricks.com/snippets/css/complete-guide-grid/
 https://www.w3schools.com/css/tryit.asp?filename=trycss_grid_grid-column_line
 
 https://www.w3schools.com/css/css_grid_item.asp
-
 
 https://github.com/CSSLint/csslint/wiki/require-fallback-colors
 
@@ -418,20 +548,3 @@ https://css-tricks.com/snippets/css/css-box-shadow/
 
 
 */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
